// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`operator parsing > should parse: ++(1) 1`] = `"+"`;

exports[`operator parsing > should parse: ++(1) 2`] = `"++(1)"`;

exports[`operator parsing > should parse: ++(1) 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "operator",
    "value": "+",
  },
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "inputId": 0,
      "start": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
    },
    "type": "operator",
    "value": "+",
  },
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "nodes": [
      {
        "raws": {},
        "source": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "inputId": 0,
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "type": "numeric",
        "unit": "",
        "value": "1",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "inputId": 0,
      "start": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
    },
    "type": "parentheses",
    "value": "()",
  },
]
`;

exports[`operator parsing > should parse: 2 * 10 1`] = `"2"`;

exports[`operator parsing > should parse: 2 * 10 2`] = `"2*10"`;

exports[`operator parsing > should parse: 2 * 10 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": "2",
  },
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "inputId": 0,
      "start": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
    },
    "type": "operator",
    "value": "*",
  },
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "inputId": 0,
      "start": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": "10",
  },
]
`;

exports[`operator parsing > should parse: 2 / 10 1`] = `"2"`;

exports[`operator parsing > should parse: 2 / 10 2`] = `"2/10"`;

exports[`operator parsing > should parse: 2 / 10 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": "2",
  },
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "inputId": 0,
      "start": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
    },
    "type": "operator",
    "value": "/",
  },
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "inputId": 0,
      "start": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": "10",
  },
]
`;

exports[`operator parsing > should parse: 5+ 5 1`] = `"5"`;

exports[`operator parsing > should parse: 5+ 5 2`] = `"5+ 5"`;

exports[`operator parsing > should parse: 5+ 5 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": "5",
  },
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "inputId": 0,
      "start": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
    },
    "type": "operator",
    "value": "+ ",
  },
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "inputId": 0,
      "start": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": "5",
  },
]
`;

exports[`operator parsing > should parse: 5px+5px 1`] = `"5"`;

exports[`operator parsing > should parse: 5px+5px 2`] = `"5 +5"`;

exports[`operator parsing > should parse: 5px+5px 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "px",
    "value": "5",
  },
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "inputId": 0,
      "start": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
    },
    "type": "numeric",
    "unit": "px",
    "value": "+5",
  },
]
`;
